--- a/KoperasiTenteraAPIServices.API/appsettings.Development.json
+++ b/KoperasiTenteraAPIServices.API/appsettings.Development.json
@@ -8,6 +8,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=KoperasiTenteralDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
+  "Smtp": {
+    "SenderAddress": "noreply@koperasitenteral.com",
+    "SenderDisplayName": "Koperasi Tenteral",
+    "UserName": "testinguser",
+    "Password": "testingpassword",
+    "Host": "netmail.koperasitenteral.com",
+    "Port": 587, //465
+    "EnableSSL": false,
+    "UseDefaultCredentials": false,
+    "IsBodyHTML": true
+  },
+  "SMS": {
+    "SmsApiUrl": "https://myapi/SMSAPIWeb/api/"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -64,5 +78,6 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId", "Environment", "OperationId", "ApplicationName" ]
-  }
+  },
+  "AllowedHosts": "*"
 }
